--- a/bookmanager/src/main/resources/templates/edit_book.html
+++ b/bookmanager/src/main/resources/templates/edit_book.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:th="http://www.thymeleaf.org">
 <head>
+<meta charset="utf-8"  name="viewport" content="width=device-width,initial-scale=1.0"/>
 <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
 <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
 <script type="text/javascript" src="@{js/jquery-3.6.0.min.js}"></script>
